@@ -1,3 +1,7 @@
+2014-12-02  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* kpse-visibility.m4: Also try -fvisibility-inlines-hidden.
+
 2014-11-17  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* kpse-win32.m4: Check for WIN64 and AC_SUBST([WIN_WRAPPER]).
