@@ -1,3 +1,7 @@
+2014-12-02  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* configure.ac: Drop useless KPSE_COMPILER_VISIBILITY.
+
 2014-09-15  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* Imported release 1.8.1.
